# sparkland-test

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.py  storage_simplified.py
.devcontainer/: .env.devcontainer  Dockerfile  devcontainer.json  setup.sh
crypto_converter/: __init__.py
crypto_converter/api/: models.py  service.py  settings.py  validators.py
crypto_converter/quote_consumer/: __init__.py  service.py  settings.py
crypto_converter/shared/: config.py  models.py  storage.py
crypto_converter/storage/: models.py  quote_storage.py  settings.py
tests/: conftest.py  test_api.py  test_integration.py  test_storage.py  test_validators.py
